Do not mock YangInstanceIdentifier.PathArgument
Use a real NodeIdentifier instead of mocking, as PathArgument is getting
sealed.

Change-Id: I30a86490a4430226d14a5391ac13e1829fe4ebe5
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>